# whole_body_state_conversions

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
.github/workflows/: industrial_ci_action.yml
include/whole_body_state_conversions/: whole_body_state_interface.h
src/whole_body_state_conversions/: __init__.py  whole_body_interface.py
