<?xml version="1.0"?>
<package format="3">
  <name>whole_body_state_conversions</name>
  <version>0.0.1</version>
  <description>
    Conversions between Pinocchio Models and whole_body_state_msgs messages.
  </description>

  <maintainer email="carlos.mastalli@ad.ec.uk">Carlos Mastalli</maintainer>
  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>pinocchio</depend>
  <depend>whole_body_state_msgs</depend></depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
</package>
